Actualizado xml boton

--- a/views/sid_projects_dossier_sales.xml
+++ b/views/sid_projects_dossier_sales.xml
@@ -9,7 +9,7 @@
             <field name="priority" eval="1000"/>
             <field name="inherit_id" ref="sale.view_order_tree"/>
             <field name="arch" type="xml">
-                <xpath expr="//tree[1]/field[@name='opportunity_group_id']" position="after">
+                <xpath expr="//field[@name='opportunity_group_id']" position="after">
                     <field name="tiene_dossier" optional="hide" readonly='0'/>
                 </xpath>
                 <xpath expr="//field[@name='quotations_id']" position="before">
