--- a/views/sid_projects_dossier_sales.xml
+++ b/views/sid_projects_dossier_sales.xml
@@ -1,6 +1,12 @@
 <odoo>
     <data>
 
+        <record id="action_open_dossier_folder" model="ir.actions.act_window">
+            <field name="name">Abrir Dossier</field>
+            <field name="res_model">sale.order</field>
+            <field name="view_mode">form</field>
+            <field name="target">current</field>
+        </record>
         <!--SALE ORDER - ORDERS 	model="ir.ui.view" 	sale.view_order_tree-->
 
         <record id="sid_projects_dossier_sales" model="ir.ui.view">
