--- a/views/sid_projects_dossier_sales.xml
+++ b/views/sid_projects_dossier_sales.xml
@@ -9,8 +9,8 @@
         </record>
         <!--SALE ORDER - ORDERS 	model="ir.ui.view" 	sale.view_order_tree-->
 
-        <record id="sid_projects_dossier_sales" model="ir.ui.view">
-            <field name="name">sid_projects_dossier_sales.tree</field>
+        <record id="sid_projects_dossier_sales_tree" model="ir.ui.view">
+            <field name="name">sid_projects_dossier_sales_tree</field>
             <field name="model">sale.order</field>
             <field name="priority" eval="1000"/>
             <field name="inherit_id" ref="sale.view_order_tree"/>
