--- a/views/sid_projects_dossier_sales.xml
+++ b/views/sid_projects_dossier_sales.xml
@@ -13,7 +13,7 @@
                 </xpath>
                 <xpath expr="//field[@name='quotations_id']" position="before">
                     <button
-                            name="sid_projects_dossier.action_open_dossier_folder"
+                            name="%(sid_projects_dossier.action_open_dossier_folder)d"
                             type="action"
                             string="Dossier"
                             icon="fa-book"
