--- a/views/sid_projects_dossier_sales.xml
+++ b/views/sid_projects_dossier_sales.xml
@@ -19,6 +19,7 @@
                             icon="fa-book"
                             class="oe_inline"
                             attrs="{'invisible': ['|',('state','!=','sale'),('tiene_dossier','!=',True)]}"
+                            groups="sid_dossier_management.group_dossier_user,sid_dossier_management.group_dossier_manager"
                     />
                 </xpath>
             </field>
@@ -34,12 +35,12 @@
                     <!--    <br/> -->
                     <span>
                         <button class="btn-info" icon="fa-plus" name="action_create_dossier_folders"
-                                type="object" groups="__export__.res_groups_106_7375280c,sales_team.group_sale_manager"
+                                type="object" groups="sid_dossier_management.group_dossier_manager,sales_team.group_sale_manager"
                                 string=" Crear Dossier"/>
                     </span>
                     <span>
                         <button class="btn-info" icon="fa-book" name="action_open_dossier_folder"
-                                groups="__export__.res_groups_106_7375280c,sales_team.group_sale_manager" type="object"
+                                groups="sid_dossier_management.group_dossier_user,sales_team.group_sale_manager" type="object"
                                 string=" Ver Dossier"/>
                     </span>
                 </xpath>
