--- a/views/sid_projects_dossier_sales.xml
+++ b/views/sid_projects_dossier_sales.xml
@@ -6,12 +6,14 @@
             <field name="name">sale.order.tree</field>
             <field name="model">sale.order</field>
             <field name="priority" eval="1000"/>
-            <field name="inherit_id" ref="sale.view_order_tree"/>
             <field name="arch" type="xml">
-                <xpath expr="//tree[1]/field[@name='quotations_id']" position="after">
+                <?xml version="1.0"?>
+                <tree string="Sales Orders" sample="1" decoration-info="invoice_status == 'to invoice'"
+                      decoration-muted="state == 'cancel'">
+                    <field name="message_needaction" invisible="1"/>
                     <field name="tiene_dossier" optional="hide" readonly='0'/>
-                </xpath>
-                <xpath expr="//field[@name='quotations_id']" position="before">
+                    <field name="name" string="Number" readonly="1" decoration-bf="1"/>
+                    <field name="quotations_id" string="Pedido/Contrato" readonly="1" decoration-bf="1"/>
                     <button
                             name="action_open_dossier_folder"
                             type="object"
@@ -21,7 +23,25 @@
                             attrs="{'invisible': ['|',('state','!=','sale'),('tiene_dossier','!=',True)]}"
                             groups="sid_projects_dossier.group_dossier_user,sid_projects_dossier.group_dossier_manager"
                     />
-                </xpath>
+                    <field name="date_order" string="Order Date" widget="date" optional="show"/>
+                    <field name="commitment_date" optional="hide"/>
+                    <field name="expected_date" optional="hide"/>
+                    <field name="partner_id" readonly="1"/>
+                    <field name="user_id" optional="show" widget="many2one_avatar_user"/>
+                    <field name="activity_ids" widget="list_activity" optional="show"/>
+                    <field name="team_id" optional="hide"/>
+                    <field name="company_id" groups="base.group_multi_company" optional="show" readonly="1"/>
+                    <field name="amount_untaxed" sum="Total Tax Excluded" widget="monetary" optional="hide"/>
+                    <field name="amount_tax" sum="Tax Total" widget="monetary" optional="hide"/>
+                    <field name="amount_total" sum="Total Tax Included" widget="monetary" decoration-bf="1"
+                           optional="show"/>
+                    <field name="currency_id" invisible="1"/>
+                    <field name="invoice_status" decoration-success="invoice_status == 'invoiced'"
+                           decoration-info="invoice_status == 'to invoice'"
+                           decoration-warning="invoice_status == 'upselling'" widget="badge" optional="show"/>
+                    <field name="tag_ids" optional="hide" widget="many2many_tags" options="{'color_field': 'color'}"/>
+                    <field name="state" invisible="1"/>
+                </tree>
             </field>
         </record>
 
@@ -35,12 +55,14 @@
                     <!--    <br/> -->
                     <span>
                         <button class="btn-info" icon="fa-plus" name="action_create_dossier_folders"
-                                type="object" groups="sid_dossier_management.group_dossier_manager,sales_team.group_sale_manager"
+                                type="object"
+                                groups="sid_dossier_management.group_dossier_manager,sales_team.group_sale_manager"
                                 string=" Crear Dossier"/>
                     </span>
                     <span>
                         <button class="btn-info" icon="fa-book" name="action_open_dossier_folder"
-                                groups="sid_dossier_management.group_dossier_user,sales_team.group_sale_manager" type="object"
+                                groups="sid_dossier_management.group_dossier_user,sales_team.group_sale_manager"
+                                type="object"
                                 string=" Ver Dossier"/>
                     </span>
                 </xpath>
