--- a/views/sid_projects_dossier_sales.xml
+++ b/views/sid_projects_dossier_sales.xml
@@ -56,14 +56,14 @@
                     <span>
                         <button class="btn-info" icon="fa-plus" name="action_create_dossier_folders"
                                 type="object"
-                                groups="sid_dossier_management.group_dossier_manager,sales_team.group_sale_manager"
-                                string=" Crear Dossier"/>
+                                groups="sid_projects_dossier.group_dossier_manager,sales_team.group_sale_manager"
+                                string="Crear Dossier"/>
                     </span>
                     <span>
                         <button class="btn-info" icon="fa-book" name="action_open_dossier_folder"
-                                groups="sid_dossier_management.group_dossier_user,sales_team.group_sale_manager"
+                                groups="sid_projects_dossier.group_dossier_user,sales_team.group_sale_manager"
                                 type="object"
-                                string=" Ver Dossier"/>
+                                string="Ver Dossier"/>
                     </span>
                 </xpath>
             </field>
