--- a/views/sid_projects_dossier_sales.xml
+++ b/views/sid_projects_dossier_sales.xml
@@ -16,8 +16,8 @@
                     <field name="quotations_id" string="Pedido/Contrato" readonly="1" decoration-bf="1"/>
                     <field name="dossier_asignado" string="Dossier asignado" readonly="1" decoration-bf="1"/>
                     <button
-                            name="action_open_dossier_folder"
-                            type="object"
+                            name="%(sid_projects_dossier.action_dossier_assign_wizard)d"
+                            type="action"
                             string="Dossier"
                             icon="fa-book"
                             class="oe_inline"
@@ -55,15 +55,15 @@
                 <xpath expr="//form/sheet" position="before">
                     <!--    <br/> -->
                     <span>
-                        <button class="btn-info" icon="fa-plus" name="action_create_dossier_folders"
-                                type="object"
+                        <button class="btn-info" icon="fa-plus" name="%(sid_projects_dossier.action_dossier_assign_wizard)d"
+                                type="action"
                                 groups="sid_projects_dossier.group_dossier_manager,sales_team.group_sale_manager"
                                 string="Crear Dossier"/>
                     </span>
                     <span>
-                        <button class="btn-info" icon="fa-book" name="action_open_dossier_folder"
+                        <button class="btn-info" icon="fa-book" name="%(sid_projects_dossier.action_dossier_assign_wizard)d"
                                 groups="sid_projects_dossier.group_dossier_user,sales_team.group_sale_manager"
-                                type="object"
+                                type="action"
                                 string="Ver Dossier"/>
                     </span>
                 </xpath>
